<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".ExtractActivity">

    <Button
        android:id="@+id/pickFileButtonE"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_button"
        android:textColor="@color/button_textColor"
        app:layout_constraintBottom_toTopOf="@id/playerLinearE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/watermarkingLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="300dp"
        app:layout_constraintTop_toBottomOf="@id/playerLinearE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/extractButtonE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/button_textColor"
            android:text="@string/extract_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerLinearE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/watermarkingLinear">

        <TextView
            android:id="@+id/titleTextViewE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_textView"
            android:textSize="18sp" />

        <rm.com.audiowave.AudioWaveView
            android:id="@+id/waveE"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            app:animateExpansion="false"
            app:chunkWidth="3dp"
            app:chunkHeight="24dp"
            app:minChunkHeight="2dp"
            app:chunkSpacing="1dp"
            app:chunkRadius="1dp"
            app:touchable="false"
            app:waveColor="@android:color/white"
            />

        <SeekBar
            android:id="@+id/audioSeekbarE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="10dp" />

        <TextView
            android:id="@+id/durationTextViewE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/default_duration"
            android:textSize="20dp" />

        <Button
            android:id="@+id/playButtonE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_textColor"
            android:text="@string/play_button" />

    </LinearLayout>


    <ImageView
        android:id="@+id/messageImageviewE"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watermarkingLinear"/>

</androidx.constraintlayout.widget.ConstraintLayout>