<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".InsertActivity">


    <Button
        android:id="@+id/pickFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_button"
        android:textColor="@color/button_textColor"
        app:layout_constraintBottom_toTopOf="@id/playerLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/watermarkingLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/playerLinear2"
        app:layout_constraintTop_toBottomOf="@id/playerLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textColor="@color/button_textColor"
            android:text="@string/insert_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/watermarkingLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pickFileButton">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_textView"
            android:textSize="18sp" />

        <rm.com.audiowave.AudioWaveView
            android:id="@+id/wave"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            app:animateExpansion="false"
            app:chunkWidth="3dp"
            app:chunkHeight="24dp"
            app:minChunkHeight="2dp"
            app:chunkSpacing="1dp"
            app:chunkRadius="1dp"
            app:touchable="false"
            app:waveColor="@android:color/white"
            />

        <SeekBar
            android:id="@+id/audioSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="10dp" />

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/default_duration"
            android:textSize="20dp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:textColor="@color/button_textColor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerLinear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/watermarkingLinear">

        <TextView
            android:id="@+id/titleTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_textView"
            android:textSize="18sp" />

        <rm.com.audiowave.AudioWaveView
            android:id="@+id/wave2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_margin="16dp"
            app:animateExpansion="false"
            app:chunkWidth="3dp"
            app:chunkHeight="24dp"
            app:minChunkHeight="2dp"
            app:chunkSpacing="1dp"
            app:chunkRadius="1dp"
            app:touchable="false"
            app:waveColor="@android:color/white"
            />

        <SeekBar
            android:id="@+id/audioSeekbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:padding="10dp" />

        <TextView
            android:id="@+id/durationTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="@string/default_duration"
            android:textSize="20dp" />

        <Button
            android:id="@+id/playButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_button"
            android:textColor="@color/button_textColor" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>